fix: add padding to avoid clipping bottom of today marker

--- a/styles.css
+++ b/styles.css
@@ -426,7 +426,7 @@ div:has(.block-language-habittracker),
 	--graph-cell-gap: 4px;
 	--graph-gap-opacity-percentage: calc(var(--graph-gap-opacity) * 100%);
 	gap: var(--graph-cell-gap);
-	padding-bottom: 2px;
+	padding-bottom: 4px;
 	min-width: 0;
 }
 
